Fix pattern